# actions-playground

./: .clang-tidy  CMakeLists.txt  jsonval-matcher.json  readme.md  reamde.md
.github/disabled-workflows/: CommentResponse.yml  WindowsVisualStudio2019.yml  cmake.yml  docs.yml  pr_dispatch.yml  tag.yml
.github/problem-matchers/: cmake-build-matcher.json  cmake-build-matchers.json  matcher.json
.github/workflows/: CommentResponse.yml  MatrixTesting.yml  PRComment.yml  Ubuntu1804.yml  WindowsVisualStudio2019.yml  approvedPr.yml  cmake.yml  complex-matrix-testing.yaml  cpplint.yml  docs.yml  experiments.yml  install-mpi.yml  labelledPR.yml  nightly-with-notification-demo.yml  nightly-with-notification.yml  pr_comment.yml  pr_dispatch.yml  pr_or_labeled.yml  releases.yml  setoutputedeprecated.yml  tag-or-file-push.yml  tag.yml  thorough.yml  ubuntu-apt-downgrade.yml
cmake/: ClangTidy.cmake  Cpplint.cmake  common.cmake  doxygen.cmake
cmake/modules/: FindClangFormat.cmake  FindClangTidy.cmake  FindCpplint.cmake  FindPandoc.cmake
docs/: CMakeLists.txt
helloExecutable/: CMakeLists.txt
helloExecutable/src/: main.cpp
include/: hello.hpp
include/hello/: Hello.hpp
scripts/: actions-cpplint-annotations.py  actions-gcc-annotations.py  actions-msvc-annotations.py
src/: CMakeLists.txt  hello.cpp  main.cpp
src/hello/: Hello.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
